@@ -5,3 +5,4 @@ buttonList = listClass.list()
 buttonGroupList = listClass.list()
 currencyList = listClass.list()
 objectList = listClass.list()
+infoboxList = listClass.list()
