@@ -5,4 +5,5 @@ buttonGroup = None
 buttonFunctionality = []
 drawConditionsList = None
 updateTextList = None
-buttonName = buttonClass.button(textList, activeMenuList, (255, 255, 255), 0, 0, buttonGroup, buttonFunctionality, drawConditionsList, updateTextList)
+infobox = None
+buttonName = buttonClass.button(textList, activeMenuList, (255, 255, 255), 0, 0, buttonGroup, buttonFunctionality, drawConditionsList, updateTextList, infobox)
